force-app/main/default/objects/Account/fields/Branch_Master__c.field-meta.xml
<CustomField>
    <fullName>Branch_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Master</label>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Customer Informations</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>