force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>OBC</fullName>
            </value>
            <value>
                <fullName>OBST</fullName>
            </value>
            <value>
                <fullName>Economically Weaker Section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>