force-app/main/default/objects/Account/fields/DTDC_Express_Limited__c.field-meta.xml
<CustomField>
    <fullName>DTDC_Express_Limited__c</fullName>
    <label>DTDC Express Limited</label>
    <length>18</length>
    <type>Text</type>
</CustomField>