force-app/main/default/objects/Account/fields/Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Id__c</fullName>
    <label>Enrollment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>