force-app/main/default/objects/Account/fields/GST_ID_Copy_Upload__c.field-meta.xml
<CustomField>
    <fullName>GST_ID_Copy_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST ID Copy Upload</label>
    <type>Checkbox</type>
</CustomField>