force-app/main/default/objects/Account/fields/Husband_Wife_S_Name__c.field-meta.xml
<CustomField>
    <fullName>Husband_Wife_S_Name__c</fullName>
    <label>Husband / Wife&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>