force-app/main/default/objects/Account/fields/PAN_Card_copy_upload__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_copy_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN Card copy upload</label>
    <type>Checkbox</type>
</CustomField>