force-app/main/default/objects/Account/fields/PAN_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_Number__c</fullName>
    <label>PAN Card Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>