force-app/main/default/objects/Account/fields/Person_With_Disability__c.field-meta.xml
<CustomField>
    <fullName>Person_With_Disability__c</fullName>
    <label>Person With Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>