force-app/main/default/objects/Account/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buddhism</fullName>
            </value>
            <value>
                <fullName>Christianity</fullName>
            </value>
            <value>
                <fullName>Hinduism</fullName>
            </value>
            <value>
                <fullName>Jainism</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Sikhism</fullName>
            </value>
            <value>
                <fullName>Zoroastrianism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>