force-app/main/default/objects/Account/recordTypes/Courier_Agency.recordType-meta.xml
<RecordType>
    <fullName>Courier_Agency</fullName>
    <active>true</active>
    <label>Courier Agency</label>
</RecordType>