force-app/main/default/objects/Account/recordTypes/External_Lawyer.recordType-meta.xml
<RecordType>
    <fullName>External_Lawyer</fullName>
    <active>true</active>
    <label>External Lawyer</label>
</RecordType>