force-app/main/default/objects/Account/recordTypes/Insurance_Agency.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Agency</fullName>
    <active>true</active>
    <label>Insurance Agency</label>
</RecordType>