force-app/main/default/objects/Account/recordTypes/Internal_Employee.recordType-meta.xml
<RecordType>
    <fullName>Internal_Employee</fullName>
    <active>true</active>
    <label>Internal Employee</label>
</RecordType>